EPA-231: Fix typo